--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "LearnRabbitMQ/workqueues"
+        "LearnRabbitMQ/workqueues",
+        "TestStuff"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
