add some data structures

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "LearnRabbitMQ/workqueues",
-        "TestStuff"
+        "TestStuff",
+        "LearnDataStructure"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
