add maven project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
-// {
+{
+    "java.configuration.updateBuildConfiguration": "automatic"
+} // {
 //     "java.project.sourcePaths": [
 //         "LearnRabbitMQ/workqueues",
 //         "TestStuff",
