--- a/LearnSpring/minhSpring/pom.xml
+++ b/LearnSpring/minhSpring/pom.xml
@@ -38,6 +38,12 @@
 			<version>3.1.2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
