--- a/LearnSpring/minhSpring/pom.xml
+++ b/LearnSpring/minhSpring/pom.xml
@@ -67,6 +67,11 @@
 				<groupId>com.unboundid</groupId>
 				<artifactId>unboundid-ldapsdk</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
