--- a/LearnSpring/minhSpring/src/main/resources/application.properties
+++ b/LearnSpring/minhSpring/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 spring.application.name=minhSpring
-spring.ldap.embedded.ldif=classpath:test-server.ldif
-spring.ldap.embedded.base-dn=dc=springframework,dc=org
-spring.ldap.embedded.port=8389
+# spring.ldap.embedded.ldif=classpath:test-server.ldif
+# spring.ldap.embedded.base-dn=dc=springframework,dc=org
+# spring.ldap.embedded.port=8389
+
+spring.graphql.graphiql.enabled=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db_graph
+spring.datasource.username=root
+spring.datasource.password=12345
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
